--- a/css/style.css
+++ b/css/style.css
@@ -1,87 +1,118 @@
-/* Navbar container */
-.navbar {
-  overflow: hidden;
-  background-color: gray;
-  font-family: Arial;
+*{
+  margin: 0;
+  padding: 0;
 }
-
-/* Links inside the navbar */
-.navbar a {
+body{
+  background-color: #e8ebea;
+}
+nav{
+  width:100%;
+  height:50px;
+  background-color: white;
+}
+nav p{                  /* logo */
+  font-family: arial;
+  color:#222;
+  font-size: 22px;
+  line-height: 50px;
+  float:left;
+  padding: 0px 20px; /*left right*/
+}
+nav ul{
   float: left;
-  font-size: 16px;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
+}
+nav ul li{
+  float:left;
+  list-style: none; 
+  position: relative; 
+}
+nav ul li a{
+  display: block;
+  font-family: arial;
+  color:#222;
+  font-size: 14px;
+  padding:18px 14px;
   text-decoration: none;
 }
-
-/* The dropdown container */
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
-/* Dropdown button */
-.dropdown .dropbtn {
-  font-size: 16px;
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit; /* Important for vertical align on mobile phones */
-  margin: 0; /* Important for vertical align on mobile phones */
-}
-
-/* Add a blue background color to navbar links on hover */
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: lightskyblue;
-}
-
-/* Dropdown content (hidden by default) */
-.dropdown-content {
+nav ul li ul{
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  background-color: white;
+  padding: 1px;
 }
-
-/* Links inside the dropdown */
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
+nav ul li:hover ul {
   display: block;
-  text-align: left;
+
+}
+nav ul li ul li{ /*drop items*/
+  width:180px
+}
+nav ul li ul li a{ /*drop items*/
+  padding: 10px 14px;
+}
+nav ul li ul li a:hover{ /*drop items*/
+  background-color: #f3f3f3;
 }
 
-/* Add a grey background color to dropdown links on hover */
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-/* allign the contents right*/
-.topnav-right {
-  float: right;
-}
-
-/* Add a color to the active/current link */
-.navbar a.active {
-  background-color: #4CAF50;
-  color: white;
-}
-
-
-button:active{
-  background:olive;
-}
 textarea{
   resize: none;
 }
+/* Color converter */
+
+.color-box{
+
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    display: grid;
+    place-items: center;
+    height: 100vh;
+
+}
+.slider-box{
+  height: 400px;
+  width: 300px;
+  background: #333;
+  display: grid;
+  place-items: center;
+  /* border-radius: 50px; */
+  color: #fff;
+  font-family: verdana;
+  padding-bottom: 40px;
+}
+#box{
+  height: 40px;
+  width: 80%;
+  border: none;
+  outline: none;
+  border-radius: 50px;
+  text-align: center;
+
+}
+input[type="range"]{
+  -webkit-appearance:none;
+  height: 10px;
+  width: 80%;
+  border-radius: 50px;
+  outline: none;
+}
+input[type="range"]::-webkit-slider-thumb{
+  -webkit-appearance:none;
+  height:25px;
+  width: 25px;
+  background:#fff ;
+  border-radius:50% ;
+  cursor: pointer;
+
+}
+.slider-box #red{
+ background: linear-gradient(90deg, #000,red);
+}
+.slider-box #green{
+  background: linear-gradient(90deg, #000,green);
+ }
+ .slider-box #blue{
+  background: linear-gradient(90deg, #000,blue);
+ }
+
+
