--- a/css/style.css
+++ b/css/style.css
@@ -118,3 +118,47 @@ input[type="range"]::-webkit-slider-thumb{
  .slider-box #blue{
   background: linear-gradient(90deg, #000,blue);
  }
+
+ .translate-content{
+  margin-left: 5%;
+  background: white;
+  width:90%;
+}
+ .container{
+  width:90%;
+  height: 65vh;
+  margin-left: 5%;
+  background: white;
+  display: flex;
+  justify-content: space-between;
+}
+.translate-box{
+  width:80%;
+  height: 370px;
+  background-color: lightskyblue;
+  margin: 30px;
+  box-sizing: border-box;
+}
+
+.button-row{
+
+  margin-left: 5%;
+  background: white;
+  width:90%;
+  height: 40px;
+  padding-top: 12px;;
+
+}
+
+
+/* media queries for translate box
+  @media screen and(max-width:1200px){
+  .box{
+    width:40%;
+  }
+}
+@media screen and(max-width:600px){
+  .box{
+    width:90%;
+  }
+}*/
