--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ input[type="range"]::-webkit-slider-thumb{
 .translate-box{
   width:80%;
   height: 370px;
-  background-color: lightskyblue;
+  background-color: #e8ebea;
   margin: 30px;
   box-sizing: border-box;
 }
