--- a/css/test.css
+++ b/css/test.css
@@ -59,67 +59,12 @@
   nav ul li ul li a:hover{ /*drop items*/
     background-color: #f3f3f3;
   }
-  
   textarea{
     resize: none;
   }
-  /* Color converter */
+
+
   
-  .color-box{
-  
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      display: grid;
-      place-items: center;
-      height: 100vh;
-  
-  }
-  .slider-box{
-    height: 400px;
-    width: 300px;
-    background: #333;
-    display: grid;
-    place-items: center;
-    /* border-radius: 50px; */
-    color: #fff;
-    font-family: verdana;
-    padding-bottom: 40px;
-  }
-  #box{
-    height: 40px;
-    width: 80%;
-    border: none;
-    outline: none;
-    border-radius: 50px;
-    text-align: center;
-  
-  }
-  input[type="range"]{
-    -webkit-appearance:none;
-    height: 10px;
-    width: 80%;
-    border-radius: 50px;
-    outline: none;
-  }
-  input[type="range"]::-webkit-slider-thumb{
-    -webkit-appearance:none;
-    height:25px;
-    width: 25px;
-    background:#fff ;
-    border-radius:50% ;
-    cursor: pointer;
-  
-  }
-  .slider-box #red{
-   background: linear-gradient(90deg, #000,red);
-  }
-  .slider-box #green{
-    background: linear-gradient(90deg, #000,green);
-   }
-   .slider-box #blue{
-    background: linear-gradient(90deg, #000,blue);
-   }
 /*  Footer element 
     .footer {
     position: fixed;
@@ -131,35 +76,12 @@
     background-color: white;
   }  */
   .translate-content{
-    margin-left: 5%;
-    background: white;
-    width:90%;
-  }
-   .container{
-    width:90%;
-    height: 65vh;
-    margin-left: 5%;
-    background: white;
-    display: flex;
-    justify-content: space-between;
-  }
-  .translate-box{
-    width:80%;
-    height: 370px;
-    background-color: lightskyblue;
-    margin: 30px;
-    box-sizing: border-box;
-  }
-
-  .button-row{
-
-    margin-left: 5%;
-    background: white;
-    width:90%;
-    height: 40px;
-    padding-top: 12px;;
+    margin: 5% 5% 0 5%;
+    padding: 3%;
+    background: rgb(142, 151, 151);
 
   }
+
 
 
   /* media queries for translate box
